[package]
name = "datadriven"
version = "0.6.0"
authors = ["Justin Jaffray <justin.jaffray@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Rewritable table-driven testing"
repository = "https://github.com/justinj/datadriven"
homepage = "https://github.com/justinj/datadriven"
readme = "README.md"

[features]
default = ["async"]
async = ["futures"]

[dependencies]
anyhow = "1.0"
futures = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { version = "1.7", features = ["macros", "rt"] }
